# smugmug-photo-selector

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  fly.toml  pyproject.toml
.github/workflows/: ci.yaml
scripts/: docker-run.sh  simple_oauth.py
smugmug_photo_selector/: app.py  config.py  models.py  smugmug_service.py
tests/: __init__.py  test_app.py  test_smugmug_service.py
