[project]
name = "smugmug-photo-selector"
version = "0.1.0"
description = "Simple FastAPI app to extract all photos from a SmugMug album in all available sizes."
authors = [
    {name = "Sam Marxz",email = "sam@marxz.me"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard] (>=0.115.14,<0.116.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "requests-oauthlib (>=2.0.0,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
taskipy = "^1.14.1"
ruff = "^0.12.2"
pytest-asyncio = "^1.0.0"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'fastapi dev smugmug_photo_selector/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=smugmug_photo_selector -vv'
post_test = 'coverage html'

